--- a/public/src/styles.css
+++ b/public/src/styles.css
@@ -101,6 +101,45 @@ button[disabled] {
  * @author  Maya
  * @since   22.03.2018
  */
+/**
+ * jodel icon farben
+ */
+.jodelIcon-orange {
+  height: 100%;
+  background: url('assets/jodel_inv-free_orange.png') no-repeat right center;
+  background-size: contain;
+}
+.jodelIcon-green {
+  height: 100%;
+  background: url('assets/jodel_inv-free_green.png') no-repeat right center;
+  background-size: contain;
+}
+.jodelIcon-yellow {
+  height: 100%;
+  background: url('assets/jodel_inv-free_yellow.png') no-repeat right center;
+  background-size: contain;
+}
+.jodelIcon-red {
+  height: 100%;
+  background: url('assets/jodel_inv-free_red.png') no-repeat right center;
+  background-size: contain;
+}
+.jodelIcon-blue {
+  height: 100%;
+  background: url('assets/jodel_inv-free_blue.png') no-repeat right center;
+  background-size: contain;
+}
+.jodelIcon-turquoise {
+  height: 100%;
+  background: url('assets/jodel_inv-free_turquoise.png') no-repeat right center;
+  background-size: contain;
+}
+/**
+ * Classes for Colors
+ *
+ * @author  Maya
+ * @since   22.03.2018
+ */
 .hm-orange-0 {
   background-color: #fff7ed;
 }
@@ -138,7 +177,7 @@ button[disabled] {
   color: #fddfbc;
 }
 .dark-orange {
-  color: #fcc88a;
+  color: #fcbc71;
 }
 .bg-orange {
   background-color: #fcc88a;
@@ -147,7 +186,7 @@ button[disabled] {
   background-color: #fddfbc;
 }
 .bg-dark-orange {
-  background-color: #fcc88a;
+  background-color: #fcbc71;
 }
 .hm-green-0 {
   background-color: #eff5df;
@@ -186,7 +225,7 @@ button[disabled] {
   color: #dce8b9;
 }
 .dark-green {
-  color: #c8dc92;
+  color: #bfd57f;
 }
 .bg-green {
   background-color: #c8dc92;
@@ -195,7 +234,7 @@ button[disabled] {
   background-color: #dce8b9;
 }
 .bg-dark-green {
-  background-color: #c8dc92;
+  background-color: #bfd57f;
 }
 .hm-yellow-0 {
   background-color: #fffbf4;
@@ -234,7 +273,7 @@ button[disabled] {
   color: #ffeac1;
 }
 .dark-yellow {
-  color: #fed98f;
+  color: #fed175;
 }
 .bg-yellow {
   background-color: #fed98f;
@@ -243,7 +282,7 @@ button[disabled] {
   background-color: #ffeac1;
 }
 .bg-dark-yellow {
-  background-color: #fed98f;
+  background-color: #fed175;
 }
 .hm-red-0 {
   background-color: #fefdfd;
@@ -282,7 +321,7 @@ button[disabled] {
   color: #f6d5d2;
 }
 .dark-red {
-  color: #edaea8;
+  color: #e89a93;
 }
 .bg-red {
   background-color: #edaea8;
@@ -291,7 +330,7 @@ button[disabled] {
   background-color: #f6d5d2;
 }
 .bg-dark-red {
-  background-color: #edaea8;
+  background-color: #e89a93;
 }
 .hm-blue-0 {
   background-color: #e0f0f6;
@@ -330,7 +369,7 @@ button[disabled] {
   color: #b8dceb;
 }
 .dark-blue {
-  color: #90c9e0;
+  color: #7cbfdb;
 }
 .bg-blue {
   background-color: #90c9e0;
@@ -339,7 +378,7 @@ button[disabled] {
   background-color: #b8dceb;
 }
 .bg-dark-blue {
-  background-color: #90c9e0;
+  background-color: #7cbfdb;
 }
 .hm-turquoise-0 {
   background-color: #ffffff;
@@ -378,7 +417,7 @@ button[disabled] {
   color: #e7f0ee;
 }
 .dark-turquoise {
-  color: #c7ddd7;
+  color: #b7d4cc;
 }
 .bg-turquoise {
   background-color: #c7ddd7;
@@ -387,103 +426,7 @@ button[disabled] {
   background-color: #e7f0ee;
 }
 .bg-dark-turquoise {
-  background-color: #c7ddd7;
-}
-.hm-darkGrey-0 {
-  background-color: #5b5454;
-}
-.hm-darkGrey-1 {
-  background-color: #4e4848;
-}
-.hm-darkGrey-2 {
-  background-color: #413b3b;
-}
-.hm-darkGrey-3 {
-  background-color: #332f2f;
-}
-.hm-darkGrey-4 {
-  background-color: #262323;
-}
-.hm-darkGrey-5 {
-  background-color: #191717;
-}
-.hm-darkGrey-6 {
-  background-color: #0b0b0b;
-}
-.hm-darkGrey-7 {
-  background-color: #000000;
-}
-.hm-darkGrey-8 {
-  background-color: #000000;
-}
-.hm-darkGrey-9 {
-  background-color: #000000;
-}
-.darkGrey {
-  color: #262323;
-}
-.light-darkGrey {
-  color: #413b3b;
-}
-.dark-darkGrey {
-  color: #262323;
-}
-.bg-darkGrey {
-  background-color: #262323;
-}
-.bg-light-darkGrey {
-  background-color: #413b3b;
-}
-.bg-dark-darkGrey {
-  background-color: #262323;
-}
-.hm-lightGrey-0 {
-  background-color: #ffffff;
-}
-.hm-lightGrey-1 {
-  background-color: #f2f2f2;
-}
-.hm-lightGrey-2 {
-  background-color: #e6e6e6;
-}
-.hm-lightGrey-3 {
-  background-color: #d9d9d9;
-}
-.hm-lightGrey-4 {
-  background-color: #cccccc;
-}
-.hm-lightGrey-5 {
-  background-color: #bfbfbf;
-}
-.hm-lightGrey-6 {
-  background-color: #b3b3b3;
-}
-.hm-lightGrey-7 {
-  background-color: #a6a6a6;
-}
-.hm-lightGrey-8 {
-  background-color: #999999;
-}
-.hm-lightGrey-9 {
-  background-color: #8c8c8c;
-}
-.lightGrey {
-  color: #F1F1F1;
-}
-.light-lightGrey {
-  color: #ffffff;
-}
-.dark-lightGrey {
-  color: #f1f1f1;
-}
-.bg-lightGrey {
-  background-color: #F1F1F1;
-}
-.bg-light-lightGrey {
-  background-color: #ffffff;
-}
-.bg-dark-lightGrey {
-  background-color: #f1f1f1;
+  background-color: #b7d4cc;
 }
 .hm-grey-0 {
   background-color: #a0a0a0;
@@ -522,7 +465,7 @@ button[disabled] {
   color: #878787;
 }
 .dark-grey {
-  color: #6d6d6d;
+  color: #606060;
 }
 .bg-grey {
   background-color: #6D6D6D;
@@ -531,7 +474,55 @@ button[disabled] {
   background-color: #878787;
 }
 .bg-dark-grey {
-  background-color: #6d6d6d;
+  background-color: #606060;
+}
+.hm-lightGrey-0 {
+  background-color: #ffffff;
+}
+.hm-lightGrey-1 {
+  background-color: #f2f2f2;
+}
+.hm-lightGrey-2 {
+  background-color: #e6e6e6;
+}
+.hm-lightGrey-3 {
+  background-color: #d9d9d9;
+}
+.hm-lightGrey-4 {
+  background-color: #cccccc;
+}
+.hm-lightGrey-5 {
+  background-color: #bfbfbf;
+}
+.hm-lightGrey-6 {
+  background-color: #b3b3b3;
+}
+.hm-lightGrey-7 {
+  background-color: #a6a6a6;
+}
+.hm-lightGrey-8 {
+  background-color: #999999;
+}
+.hm-lightGrey-9 {
+  background-color: #8c8c8c;
+}
+.lightGrey {
+  color: #F1F1F1;
+}
+.light-lightGrey {
+  color: #ffffff;
+}
+.dark-lightGrey {
+  color: #e4e4e4;
+}
+.bg-lightGrey {
+  background-color: #F1F1F1;
+}
+.bg-light-lightGrey {
+  background-color: #ffffff;
+}
+.bg-dark-lightGrey {
+  background-color: #e4e4e4;
 }
 /**
  * Styles fot texts and headlines
@@ -609,7 +600,7 @@ button:hover {
   position: absolute;
   font-weight: normal;
   font-size: 15px;
-  width: calc(96%);
+  width: calc(100% - 4px);
 }
 .ng-autocomplete-dropdown .ng-dropdown {
   display: none;
@@ -721,36 +712,6 @@ button:hover {
 .headerContainer .sendEditButton {
   padding: 5px 10px;
   border-radius: 2px;
-}
-.jodelIcon-orange {
-  height: 100%;
-  background: url('assets/jodel_inv-free_orange.png') no-repeat right center;
-  background-size: contain;
-}
-.jodelIcon-green {
-  height: 100%;
-  background: url('assets/jodel_inv-free_green.png') no-repeat right center;
-  background-size: contain;
-}
-.jodelIcon-yellow {
-  height: 100%;
-  background: url('assets/jodel_inv-free_yellow.png') no-repeat right center;
-  background-size: contain;
-}
-.jodelIcon-red {
-  height: 100%;
-  background: url('assets/jodel_inv-free_red.png') no-repeat right center;
-  background-size: contain;
-}
-.jodelIcon-blue {
-  height: 100%;
-  background: url('assets/jodel_inv-free_blue.png') no-repeat right center;
-  background-size: contain;
-}
-.jodelIcon-turquoise {
-  height: 100%;
-  background: url('assets/jodel_inv-free_turquoise.png') no-repeat right center;
-  background-size: contain;
 }
 .col-3 {
   height: 100%;
