--- a/public/src/app/header/content-page-selection/content-page-selection.component.less
+++ b/public/src/app/header/content-page-selection/content-page-selection.component.less
@@ -9,3 +9,57 @@ select {
     border: none;
   }
 }
+
+
+.radioSelector {
+  display: inline-block;
+  position: relative;
+  margin-right: 5px;
+  cursor: pointer;
+  font-size: 1.3em;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  //box-sizing: border-box;
+
+
+  input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+  }
+}
+
+
+/* Create a custom radio button */
+.checkmark {
+  padding: 5px;
+  background-color: #eee;
+  cursor:pointer;
+  background-color:red;
+}
+
+///* On mouse-over, add a grey background color */
+//.radioSelector:hover input ~ .checkmark {
+//  background-color: #ccc;
+//}
+//
+///* When the radio button is checked, add a blue background */
+.radioSelector input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+//
+///* Show the indicator (dot/circle) when checked */
+.radioSelector input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
