--- a/public/src/styles.css
+++ b/public/src/styles.css
@@ -735,6 +735,41 @@ select {
 select option {
   border: none;
 }
+.radioSelector {
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+  font-size: 1.3em;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.radioSelector input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+/* Create a custom radio button */
+.checkmark {
+  padding: 5px;
+  background-color: #eee;
+  cursor: pointer;
+  background-color: red;
+}
+.radioSelector input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+.radioSelector input:checked ~ .checkmark:after {
+  display: block;
+}
+/* Style the indicator (dot/circle) */
 .bar {
   height: 20px;
   width: 8px;
