--- a/public/src/app/content/shared/map-content/map-content.component.less
+++ b/public/src/app/content/shared/map-content/map-content.component.less
@@ -27,6 +27,30 @@
   background-color: @lightGrey;
 }
 
+.selectedCity {
+  width: 12px;
+  margin-right: 0;
+  height: 12px;
+  margin-bottom: 0;
+  border-radius: 2px 0 0 0;
+}
+
+.selectedCityBottom {
+  width: 12px;
+  margin-right: 0;
+  border-radius: 0 0 0 2px;
+}
+
+.selectedCityBottomRight {
+  border-radius: 0 0 2px 0;
+}
+
+.selectedCityRight {
+  height: 12px;
+  margin-bottom: 0;
+  border-radius: 0 2px 0 0;
+}
+
 .info-box {
   display: block;
   position: absolute;
