--- a/public/src/style/grid.less
+++ b/public/src/style/grid.less
@@ -69,3 +69,11 @@ input,textarea,button {
     color: @darkGrey;
   }
 }
+
+@buttonRadius: 2px;
+@bg-dark-green: #a2c246;
+@bg-dark-yellow: #feb729;
+@bg-dark-red: #db5e54;
+@bg-dark-blue: #40a1ca;
+@bg-dark-turquoise: #87b7ab;
+@bg-dark-orange: #fa9826;
