--- a/public/src/style/autocomplete.less
+++ b/public/src/style/autocomplete.less
@@ -16,7 +16,7 @@
   //box-sizing: border-box;
 }
 .ng-autocomplete-dropdown .ng-autocomplete-inputs input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: @darkGrey;
+  color: #787878;
   opacity: 1; /* Firefox */
 }
 
