--- a/public/src/app/header/header.component.less
+++ b/public/src/app/header/header.component.less
@@ -18,6 +18,19 @@
     padding: 5px 10px;
     border-radius: 2px;
   }
+
+  .getRandomJodel {
+    //background-color: blue;
+    background-color: Transparent;
+    background-repeat:no-repeat;
+    border: none;
+    cursor:pointer;
+    overflow: hidden;
+    outline:none;
+    height: 86px;
+    width: 86px;
+    float: right;
+  }
 }
 
 .for-each(@value in @jodelMainColors) {
