--- a/public/src/app/header/content-page-selection/content-page-selection.component.less
+++ b/public/src/app/header/content-page-selection/content-page-selection.component.less
@@ -15,6 +15,8 @@ select {
   display: inline-block;
   position: relative;
   margin-right: 5px;
+  margin-top:7px;
+  margin-bottom: 7px;
   cursor: pointer;
   width:150px;
   text-align:center;
@@ -124,4 +126,21 @@ select {
   display: block;
 }
 
-/* Style the indicator (dot/circle) */
+
+.slidemenu {
+  display: flex;
+  width: 300px;
+
+  .slideelement {
+    margin: 13px;
+  }
+
+  .slidenav {
+    margin: auto;
+    text-align:center;
+  }
+
+  .slidearrow {
+    cursor:pointer;
+  }
+}
